<resources>
    <string name="app_name">EWRA App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Members login</string>
    <string name="phone_number">Phone Number</string>
    <string name="login_btn_txt">Login</string>
    <string name="amount">Amount</string>
    <string name="pin">Pin</string>
    <string name="submit">Submit</string>
    <string name="airtel">Airtel</string>
    <string name="safaricom">Safaricom</string>
    <string name="telkom">Telkom</string>
    <string name="mobile_banking_login">Mobile Banking</string>
    <string name="ewra_login_txt">EWRA</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bank">Bank</string>
    <string name="shop">Shop</string>
    <string name="mobile">Mobile</string>
    <string name="bank_transactions">Bank Transactions</string>
    <string name="shop_transactions">Shop Transactions</string>
    <string name="mobile_transactions">Mobile Transactions</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="till_number">Till Number</string>
    <string name="buy_goods_with_mpesa">Buy Goods With Mpesa</string>
    <string name="business_number">Business Number</string>
    <string name="bill_account_number">Account Number</string>
    <string name="bank_card_icon">bank recyclerview card icon</string>
    <string name="card_placeholder_text">Card Title</string>
    <string name="logout">LogOut</string>

    <string name="airtime_amount">Airtime Amount</string>
    <string name="amount_to_send">Amount To Send</string>

    <string name="total_amount">Total amount</string>
    <string name="bill_amount">Bill Amount</string>


</resources>
