<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AirtimeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_airtime"
                        android:layout_width="match_parent"
                        android:layout_height="215dp"
                        android:src="@drawable/airitime"
                       />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text="Buy Airtime"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/white" />
                </LinearLayout>
                <RadioGroup
                    android:id="@+id/rg_airtime"
                    android:layout_width="410dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="0dp"
                    android:background="#f2f2f2"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/rbt_Airtel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/airtel"
                        android:textColor="#ff0000" />

                    <RadioButton
                        android:id="@+id/rbt_safaricom"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/safaricom"
                        android:textColor="#00ff00" />

                    <RadioButton
                        android:id="@+id/rbt_telkom"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/telkom"
                        android:textColor="#00ffff" />
                </RadioGroup>

                <EditText
                    android:id="@+id/airtime_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/phone_number"
                    android:inputType="textPersonName"
                     />

                <EditText
                    android:id="@+id/airtime_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                     />

                <Button
                    android:id="@+id/submit_airtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginStart="32dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="32dp"
                    android:background="@android:color/white"
                    android:text="@string/submit"
                     />
            </LinearLayout>
        </ScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>