<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BuyGoods">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text="@string/buy_goods_with_mpesa"

                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/white" />
                 <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_action_name"
               />
                </LinearLayout>


            <EditText
                android:id="@+id/till_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:inputType="textPersonName"
                android:hint="@string/till_number"
                android:gravity="center"
                />

                <EditText
                    android:id="@+id/till_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:ems="10"
                    android:gravity="center"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:inputType="number|textPersonName"
                    android:text="@string/amount"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />


            <Button
                android:id="@+id/till_submit"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="44dp"
                android:background="@android:color/white"
                android:textColor="@color/colorAccent"
                android:text="@string/submit"
                 />
            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>