<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/mobile_banking_login"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/ewra_login_txt"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="4dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="-64dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/login_text"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/txt_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_phone_black_24dp"
                            android:drawablePadding="16dp"
                            android:hint="@string/phone_number"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/colorPrimary"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/login_btn_txt"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>