<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorAccent">
                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="245dp"
                        android:src="@drawable/airitime"
                         />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text="Paybill"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/white" />

                </LinearLayout>
                <EditText
                    android:id="@+id/business_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:gravity="center"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/business_number"
                    android:inputType="textPersonName"
                     />

                <EditText
                    android:id="@+id/bill_account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:gravity="center"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/bill_account_number"
                    android:inputType="number"
                    />

                <EditText
                    android:id="@+id/bill_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:textColorHint="@android:color/black"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/amount"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                   />

                <Button
                    android:id="@+id/bill_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_rounded"
                    android:backgroundTint="@android:color/white"
                    android:layout_marginTop="48dp"
                    android:text="@string/submit"
                     />
            </LinearLayout>
        </ScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>